config: Match pretrained_weights value

--- a/model/proposed.ini
+++ b/model/proposed.ini
@@ -6,4 +6,4 @@ image_size = 256
 lr = 0.001
 num_classes = 8
 num_workers = 8
-pretrained_weights = weights/proposed_cityscapes_best.pth
+pretrained_weights = weights/proposed_best.pth
