--- a/model/unet.ini
+++ b/model/unet.ini
@@ -6,4 +6,4 @@ image_size = 256
 lr = 0.001
 num_classes = 8
 num_workers = 8
-pretrained_weights = weights/unet_cityscapes.pth
+pretrained_weights = weights/unet_best.pth
