utils: Change image size option

--- a/models/models.ini
+++ b/models/models.ini
@@ -4,7 +4,7 @@ activate_model = unet
 [unet]
 batch_size = 32
 epoch = 100
-image_size = 256
+image_size = 1024x512
 lr = 0.001
 num_classes = 8
 num_workers = 8
@@ -13,7 +13,7 @@ pretrained_weights = weights/unet_best.pth
 [proposed]
 batch_size = 10
 epoch = 100
-image_size = 256
+image_size = 1024x512
 lr = 0.001
 num_classes = 8
 num_workers = 8
