Change config file's section format

--- a/models/models.ini
+++ b/models/models.ini
@@ -1,7 +1,7 @@
 [model]
-activate_model = unet
+activate_model = UNet
 
-[unet]
+[UNet]
 batch_size = 32
 epoch = 100
 image_size = 1024x512
@@ -10,7 +10,7 @@ num_classes = 8
 num_workers = 8
 pretrained_weights = weights/unet_best.pth
 
-[proposed]
+[Proposed]
 batch_size = 10
 epoch = 100
 image_size = 1024x512
