Add type hint, simplify code, fix potential bugs

--- a/models/models.ini
+++ b/models/models.ini
@@ -8,7 +8,7 @@ image_size = 1024x512
 lr = 0.001
 num_classes = 8
 num_workers = 8
-pretrained_weights = weights/unet_best.pth
+pretrained_weights = weights/UNet_best.pth
 
 [Proposed]
 batch_size = 10
@@ -17,4 +17,4 @@ image_size = 1024x512
 lr = 0.001
 num_classes = 8
 num_workers = 8
-pretrained_weights = weights/proposed_best.pth
+pretrained_weights = weights/Proposed_best.pth
