--- a/config.ini
+++ b/config.ini
@@ -13,6 +13,15 @@ num_classes = 8
 num_workers = 8
 pretrained_weights = weights/UNet_best.pth
 
+[Backbone]
+batch_size = 16
+epoch = 100
+image_size = 1024x512
+lr = 0.001
+num_classes = 8
+num_workers = 8
+pretrained_weights = weights/Backbone_best.pth
+
 [Proposed]
 batch_size = 14
 epoch = 100
