--- a/config.yaml
+++ b/config.yaml
@@ -8,20 +8,37 @@ model: UNet
 UNet:
   batch_size: 14
   epoch: 100
-  lr: 0.001
   num_classes: 8
+  optimizer:
+    name: SGD
+    lr: 0.001
+    momentum: 0.9
+    weight_decay: 0.00001
+  scheduler:
+    name: ReduceLROnPlateau
+    min_lr: 0.0001
   pretrained_weights: weights/UNet_best.pth
 
 Backbone:
   batch_size: 8
   epoch: 100
-  lr: 0.001
   num_classes: 8
+  optimizer:
+    name: Adam
+    lr: 0.001
+  scheduler:
+    name: ReduceLROnPlateau
+    min_lr: 0.0001
   pretrained_weights: weights/Backbone_best.pth
 
 Proposed:
   batch_size: 4
   epoch: 100
-  lr: 0.001
   num_classes: 8
+  optimizer:
+    name: Adam
+    lr: 0.001
+  scheduler:
+    name: ReduceLROnPlateau
+    min_lr: 0.0001
   pretrained_weights: weights/Proposed_best.pth
