--- a/config.yaml
+++ b/config.yaml
@@ -16,6 +16,7 @@ UNet:
     weight_decay: 0.00001
   scheduler:
     name: ReduceLROnPlateau
+    patience: 5
     min_lr: 0.0001
   pretrained_weights: weights/UNet_best.pth
 
@@ -29,6 +30,7 @@ Backbone:
     weight_decay: 0.00001
   scheduler:
     name: ReduceLROnPlateau
+    patience: 5
     min_lr: 0.0001
   pretrained_weights: weights/Backbone_best.pth
 
@@ -42,5 +44,6 @@ Proposed:
     weight_decay: 0.00001
   scheduler:
     name: ReduceLROnPlateau
+    patience: 5
     min_lr: 0.0001
   pretrained_weights: weights/Proposed_best.pth
