utils: Remove Polylr

--- a/cfgs/cityscapes.yaml
+++ b/cfgs/cityscapes.yaml
@@ -55,7 +55,6 @@ DeepLabV3plus:
   backbone: Xception
   batch_size: 8
   epoch: 100
-  iter: 90000
   criterion:
     name: CrossEntropyLoss
   optimizer:
@@ -63,7 +62,10 @@ DeepLabV3plus:
     lr: 0.01
     weight_decay: 0.00001
   scheduler:
-    name: WarmupPolyLR
+    name: ReduceLROnPlateau
+    factor: 0.5
+    patience: 5
+    min_lr: 0.00005
   augmentation:
     size: !!python/tuple [769, 769]
     scale: !!python/tuple [0.25, 1.0]
