datasets: augmentation 선택 가능

--- a/cfgs/cityscapes.yaml
+++ b/cfgs/cityscapes.yaml
@@ -63,7 +63,9 @@ DeepLabV3plus:
   scheduler:
     name: CosineAnnealingWarmRestarts
   augmentation:
-    size: !!python/tuple [769, 769]
-    scale: !!python/tuple [0.25, 1.0]
-    ratio: !!python/tuple [1.0, 1.0]
+    RandomResizedCrop:
+      size: !!python/tuple [769, 769]
+      scale: !!python/tuple [0.25, 1.0]
+      ratio: !!python/tuple [1.0, 1.0]
+    RandomHorizontalFlip:
   pretrained_weights: weights/DeepLabV3plus_best.pth
