--- a/cfgs/cityscapes.yaml
+++ b/cfgs/cityscapes.yaml
@@ -66,7 +66,7 @@ AR_UNet:
   pretrained_weights: weights/Proposed_best.pth
 
 DeepLabV3plus:
-  backbone: Xception
+  backbone: ResNet101
   batch_size: 16
   epoch: 100
   criterion:
