Adam, Dropout 사용

--- a/cfgs/cityscapes.yaml
+++ b/cfgs/cityscapes.yaml
@@ -64,8 +64,9 @@ DeepLabV3plus:
   criterion:
     name: CrossEntropyLoss
   optimizer:
-    name: AdamW
+    name: Adam
     lr: 0.001
+    weight_decay: 0
   scheduler:
     name: PolyLR
     max_iter: 55800
