--- a/cfgs/cityscapes.yaml
+++ b/cfgs/cityscapes.yaml
@@ -64,9 +64,8 @@ DeepLabV3plus:
   criterion:
     name: CrossEntropyLoss
   optimizer:
-    name: Adam
+    name: AdamW
     lr: 0.001
-    weight_decay: 0
   scheduler:
     name: PolyLR
     max_iter: 55800
