--- a/cfgs/cityscapes.yaml
+++ b/cfgs/cityscapes.yaml
@@ -70,8 +70,8 @@ DeepLabV3plus:
     name: PolyLR
     max_iter: 18600
   augmentation:
-    Resize:
-      size: !!python/tuple [576, 1152]
+    RandomCrop:
+      size: !!python/tuple [769, 769]
     ColorJitter:
       brightness: 0.5
       contrast: 0.5
