--- a/cfgs/cityscapes.yaml
+++ b/cfgs/cityscapes.yaml
@@ -59,8 +59,11 @@ DeepLabV3plus:
   criterion:
     name: CrossEntropyLoss
   optimizer:
-    name: AdamW
-    lr: 0.0004
+    name: SGD
+    lr: 0.001
+    momentum: 0.9
+    weight_decay: 0.00001
+    nesterov: True
   scheduler:
     name: PolyLR
     max_iter: 18600
