--- a/cfgs/main.yaml
+++ b/cfgs/main.yaml
@@ -2,4 +2,4 @@ cfg: cfgs/cityscapes.yaml
 model: DeepLabV3plus
 amp_enabled: True
 resume_training:
-fine_tuning_batchnorm: True
+fine_tuning_batchnorm:
