--- a/cfgs/cityscapes.yaml
+++ b/cfgs/cityscapes.yaml
@@ -59,11 +59,8 @@ DeepLabV3plus:
   criterion:
     name: CrossEntropyLoss
   optimizer:
-    name: SGD
+    name: AdamW
     lr: 0.001
-    momentum: 0.9
-    weight_decay: 0.00001
-    nesterov: True
   scheduler:
     name: PolyLR
     max_iter: 18600
