--- a/cfgs/cityscapes.yaml
+++ b/cfgs/cityscapes.yaml
@@ -3,7 +3,7 @@ dataset:
   name: Cityscapes
   root: ../../data/cityscapes
   num_workers: 8
-  pin_memory: False
+  pin_memory: True
 
 # Model definitions
 UNet:
