--- a/cfgs/cityscapes.yaml
+++ b/cfgs/cityscapes.yaml
@@ -4,6 +4,8 @@ dataset:
   root: ../../data/cityscapes
   num_workers: 8
   pin_memory: False
+  normalize_mean: !!python/tuple [0.28689554, 0.32513303, 0.28389177]
+  normalize_std: !!python/tuple [0.18696375, 0.19017339, 0.18720214]
 
 # Model definitions
 AR_UNet:
