--- a/cfgs/cityscapes.yaml
+++ b/cfgs/cityscapes.yaml
@@ -39,9 +39,10 @@ DeepLabv3plus:
   backbone: Xception
   output_stride: 16
   batch_size: 8
-    epoch: 110
-    criterion:
-      name: CrossEntropyLoss
+  epoch: 110
+  criterion:
+    name: CrossEntropyLoss
+  aux_criterion:
   optimizer:
     name: RAdam
     lr: 0.001
